# web-scraper

./: README.md
base_folder/: LICENSE  MANIFEST.in  README.md  pyproject.toml  ram_data.csv  setup.cfg
base_folder/ram_scraper.egg-info/: PKG-INFO  SOURCES.txt
base_folder/web-scraper.git/: config
base_folder/web_scraping/: ram_scraper.py
