[metadata]
name = ram-scraper
verion = 0.0.1
author = Will Borucki
author_email = boruckiwill@gmail.com
description = For extracting ram price data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/willb6879/RamScraper.git
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 3.10
include_package_data = True